fix overflow on mobile

--- a/src/components/ResultsTable/ResultsTable.module.css
+++ b/src/components/ResultsTable/ResultsTable.module.css
@@ -1,8 +1,6 @@
 .result {
-  max-width: 50rem;
   margin: 2rem auto;
   padding: 1rem;
-  table-layout: fixed;
   border-spacing: 1rem;
   text-align: right;
 }
@@ -16,4 +14,16 @@
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1rem;
   color: #c2e9e0;
+}
+
+@media screen and (max-width: 768px) {
+  .result {
+    padding: 0;
+  }
+  .result thead {
+    font-size: 0.8rem;
+  }
+  .result tbody {
+    font-size: 0.75rem;
+  }
 }
